unpackaged/objects/Activity.object
<CustomObject>
  <fields>
    <fullName>ASM_NSM_Co_travel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box used by SR to register CFEs where the ASM/NSM participates.</description>
    <inlineHelpText>Check box used by SR to register CFEs where the ASM/NSM participates.</inlineHelpText>
    <label>ASM/NSM Co-travel</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>ATLANTIS_Abutments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A detailed Product</description>
    <label>ATLANTIS Abutments</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Action__c</fullName>
    <formula>IF ( IsTask, "", 
 HYPERLINK("/apex/CallReportEvent?id=" + Id + "&amp;retURL=/"+ Id, "Edit CFE", "_self")
)</formula>
    <label>Action</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Activity_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Count #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Activity_ID_18_digit__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity ID (18 digit)</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Activity_Result__c</fullName>
    <inlineHelpText>Inside Account Mangers, TeleSales and Profiling Team should enter their call result in this field along with any notes.</inlineHelpText>
    <label>Activity Result</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Profile Update</fullName>
        </value>
        <value>
          <fullName>Left Message</fullName>
        </value>
        <value>
          <fullName>Left Voicemail</fullName>
        </value>
        <value>
          <fullName>Unavailable</fullName>
        </value>
        <value>
          <fullName>Placed Reorder</fullName>
        </value>
        <value>
          <fullName>Service Call</fullName>
        </value>
        <value>
          <fullName>Shared Insight</fullName>
        </value>
        <value>
          <fullName>Scheduled Appointment</fullName>
        </value>
        <value>
          <fullName>Sent email/fax</fullName>
        </value>
        <value>
          <fullName>*No Result*</fullName>
        </value>
        <value>
          <fullName>Order: Placed with TSR</fullName>
        </value>
        <value>
          <fullName>No Order: Too Much Inventory</fullName>
        </value>
        <value>
          <fullName>No Order: Price Too High</fullName>
        </value>
        <value>
          <fullName>No Order: Had a Clinical Problem</fullName>
        </value>
        <value>
          <fullName>No Order: Does not meet needs</fullName>
        </value>
        <value>
          <fullName>TS: Left Message</fullName>
        </value>
        <value>
          <fullName>TS: Left Message (Voicemail)</fullName>
        </value>
        <value>
          <fullName>TS: Left Message (Fax)</fullName>
        </value>
        <value>
          <fullName>TS: Left Message (E-mail)</fullName>
        </value>
        <value>
          <fullName>TS: Dialed No Contact</fullName>
        </value>
        <value>
          <fullName>Lead</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Activity_Subtype__c</fullName>
    <inlineHelpText>More detailed definition on type of meeting.</inlineHelpText>
    <label>Activity Subtype</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Astra_Tech_Type__c</controllingField>
      <restricted>true</restricted>
      <valueSetName>ActivitySubtype</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>Assigned_to_me__c</fullName>
    <formula>IF(Owner:User.Id == $User.Id, true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to me?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Astra_Tech_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Customer_Facing_Event__c</controllingField>
      <restricted>true</restricted>
      <valueSetName>ActivityType</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>Botiss_D_PL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Botiss (D-PL)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Business_Initiative__c</fullName>
    <inlineHelpText>New Specialist: New Specialist AP w/o Implant Sales LY
GP: GP AP w/o Implant Sales LY
Base Business: Any customer who bought an implant LY
Atlantis: Have you discussed Atlantis w/ your customer?
DSO: National Acct calls not part of the base bus. or AP</inlineHelpText>
    <label>Business Initiative</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>New Specialist</fullName>
        </value>
        <value>
          <fullName>GP</fullName>
        </value>
        <value>
          <fullName>Clinical Base Business</fullName>
        </value>
        <value>
          <fullName>Atlantis</fullName>
        </value>
        <value>
          <fullName>DSO</fullName>
        </value>
        <value>
          <fullName>Other</fullName>
        </value>
        <value>
          <fullName>New Lab</fullName>
        </value>
        <value>
          <fullName>CEREC GP/Restorative</fullName>
        </value>
        <value>
          <fullName>Competitive Specialist</fullName>
        </value>
        <value>
          <fullName>Lab Base Business</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Bypass_Auto_Invites_When_Creating__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should not be exposed in the UI. This field can be used to suppress the calendar invites trigger when the Event is being created. For example: if you do not want the invites to be automatically sent because they will be sent elsewhere other than the trigger, you should set this to field to true.</description>
    <label>Bypass Auto Invites When Creating</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CallAnsweredTime__c</fullName>
    <label>CallAnsweredTime</label>
    <length>80</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>CallDisconnectedTime__c</fullName>
    <label>CallDisconnectedTime</label>
    <length>50</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>CallInitiatedTime__c</fullName>
    <label>CallInitiatedTime</label>
    <length>80</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>CallWrapupTime__c</fullName>
    <label>CallWrapupTime</label>
    <length>30</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Call_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Report</label>
    <referenceTo>Call_Report__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Call_Type__c</fullName>
    <description>custom field for the call type because we can not access the standard field</description>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Inbound</fullName>
        </value>
        <value>
          <fullName>Internal</fullName>
        </value>
        <value>
          <fullName>Outbound</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Call_notes__c</fullName>
    <label>Call notes</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Click_this_link_to_edit_this_CFE__c</fullName>
    <description>Custom URL to show a link to the VF Page (to edit the event) 
Temp workaround brought to mitigate the Edit Std Page</description>
    <label>Click this link to edit this CFE</label>
    <type>Url</type>
  </fields>
  <fields>
    <fullName>Co_Travel_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Co_Travel_Manager</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Co_travel__c</fullName>
    <label>Co-travel</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Manager</fullName>
        </value>
        <value>
          <fullName>Colleague/Peer</fullName>
        </value>
        <value>
          <fullName>Dealer/Distributor</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Contact_Id__c</fullName>
    <formula>WhoId</formula>
    <label>Contact Id</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Contact_Type__c</fullName>
    <description>Used for DNA TeleSales Only for Reporting Purposes - Hope to Retire this Soon!</description>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Dental Assistant</fullName>
        </value>
        <value>
          <fullName>Doctor</fullName>
        </value>
        <value>
          <fullName>Hygienist</fullName>
        </value>
        <value>
          <fullName>Office Manager</fullName>
        </value>
        <value>
          <fullName>Other</fullName>
        </value>
        <value>
          <fullName>Owner</fullName>
        </value>
        <value>
          <fullName>Receptionist</fullName>
        </value>
        <value>
          <fullName>Technician</fullName>
        </value>
        <value>
          <fullName>Unclassified Response</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Courses__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to capture CFEs where Courses was detailed as a product. Used only in ES, PT and AT.</description>
    <label>Courses</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Create_Campiagn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Campaign</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Created_by_My_Direct_Reports__c</fullName>
    <formula>IF(CreatedBy.ManagerId = $User.Id, True, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by My Direct Reports</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Created_by_me__c</fullName>
    <formula>IF(CreatedById == $User.Id, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by me</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Creator_Continent__c</fullName>
    <formula>Case(CreatedBy.User_Country__c, 
"Australia" ,"Asia/Pacific" , 
"Austria" ,"Europe" , 
"Belgium", "Europe", 
"Canada" ,"North America" , 
"Denmark", "Europe", 
"DEX","Europe",
"Finland" ,"Europe" , 
"France" ,"Europe" , 
"Germany" ,"Europe" , 
"Holland" ,"Europe" , 
"Italy" ,"Europe" , 
"Japan" ,"Asia/Pacific" , 
"Luxembourg" ,"Europe" , 
"Norway" ,"Europe" , 
"New Zealand" ,"Asia/Pacific" , 
"Poland","Europe", 
"Portugal" ,"Europe" , 
"Spain","Europe", 
"Sweden" ,"Europe" , 
"Switzerland" ,"Europe" , 
"Russia", "Russia", 
"UK" ,"Europe" , 
"USA", "North America", "None")</formula>
    <label>Creator Continent</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Creator_Country__c</fullName>
    <formula>TEXT(CreatedBy.User_Country__c)</formula>
    <label>Creator Country</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Creator_Division__c</fullName>
    <description>The Territory Division of the creator at the time when the Event/Task was created. (Set by a flow)</description>
    <label>Creator Division</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Creator_Federation_ID__c</fullName>
    <description>The federation ID of the creator at the time when the Event/Task was created. (Set by a flow)</description>
    <label>Creator Federation ID</label>
    <length>30</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Creator_Market__c</fullName>
    <formula>Case( CreatedBy.Market__c ,
"ATN", "ATN", 
"Australia", "Australia", 
"Austria", "Austria", 
"Benelux", "Benelux", 
"DEX","DEX",
"Finland", "Finland", 
"France", "France", 
"Germany", "Germany", 
"HQ", "HQ", 
"Italy", "Italy", 
"Japan", "Japan", 
"Poland", "Poland",
"NA", "NA", 
"Spain", "Spain", 
"Switzerland", "Switzerland", 
"UK", "UK", 
"Russia", "Russia", 
"Iberia", "Iberia",
"None")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creator Market</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Creator_SR_Origin__c</fullName>
    <formula>Case(CreatedBy.SR_Origin__c, 
"Astra Tech" ,"Astra Tech" , 
"Friadent" ,"Friadent" , 
"Dentsply Implants", "Dentsply Implants","None" )</formula>
    <label>Creator SR Origin</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Creator_Sales_Channel__c</fullName>
    <formula>Case(CreatedBy.Sales_Channel__c , 
"Clinical Channel" ,"Clinical Channel" , 
"Laboratory Channel" ,"Laboratory Channel" , "None")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creator Sales Channel</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Creator_Territory__c</fullName>
    <description>The name of the territory (ies) that the creator is assigned to when the Event or Task was created</description>
    <label>Creator Territory</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Customer_Facing_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Customer-Facing CF Events (Sales, Clinical Monitoring, In-Clinic Training &amp; Group Visits) 
Non Customer-Facing Non CF Events (Home Office, Training, Co Travel etc) 
Non-direct Contact Visit does not count as an actual CFE</inlineHelpText>
    <label>Customer Facing Event</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>DB_Activity_Type__c</fullName>
    <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
    <formula>IF(CONTAINS( Subject , "Email"), "Email", IF(CONTAINS( Subject , "Cold Call"), "Cold Call", IF(CONTAINS( Subject , "Call"), "Call", IF(CONTAINS( Subject , "Meeting"), "Meeting", IF(CONTAINS( Subject , "On Site Visit"), "Site Visit", IF(CONTAINS( Subject , "Quote"), "Send Letter/Quote", "Other"))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DB Activity Type</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>DNIS__c</fullName>
    <description>Field to identify call</description>
    <label>DNIS</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Dealer_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer/Distributor</label>
    <lookupFilter>
      <active>true</active>
      <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR (6 AND 7)</booleanFilter>
      <errorMessage>No Dealer Customer with this name exist</errorMessage>
      <filterItems>
        <field>Account.RecordType.Name</field>
        <operation>equals</operation>
        <value>Non-ERP Distributor</value>
      </filterItems>
      <filterItems>
        <field>Account.RecordType.Name</field>
        <operation>equals</operation>
        <value>ERP Distributor</value>
      </filterItems>
      <filterItems>
        <field>Account.RecordType.Name</field>
        <operation>equals</operation>
        <value>DEX Customer</value>
      </filterItems>
      <filterItems>
        <field>Account.RecordType.Name</field>
        <operation>equals</operation>
        <value>DEX Prospect</value>
      </filterItems>
      <filterItems>
        <field>Account.RecordTypeId</field>
        <operation>equals</operation>
        <value>DNA Distributor</value>
      </filterItems>
      <filterItems>
        <field>Account.RecordTypeId</field>
        <operation>equals</operation>
        <value>CIM Account</value>
      </filterItems>
      <filterItems>
        <field>Account.OneAccount_Type__c</field>
        <operation>equals</operation>
        <value>Distributor, DNA Distributor</value>
      </filterItems>
      <infoMessage>Search for the Dealer Customer you co-travel with. Use *PART OF DEALER NAME* to search for part of the name</infoMessage>
      <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Demonstration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Japan and ASIA - Track if the meeting contained a demonstration. Used for meeting statistics.</description>
    <inlineHelpText>Track if the meeting contained a demonstration. Used for meeting statistics.</inlineHelpText>
    <label>Demonstration</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Dentsply_Implants_Devices__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Old lable is FRIOS Instruments</description>
    <label>Dentsply Implants Devices</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Dual_Atlantis_CFE_D_UK__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To be checked by Clinical TM if conducting a CFE together with Lab TM.</inlineHelpText>
    <label>Dual Atlantis CFE (D-UK)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>End_User_Activity__c</fullName>
    <label>End User Activity</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Astra_Tech_Type__c</controllingField>
      <valueSetDefinition>
        <value>
          <fullName>Complaints Management</fullName>
        </value>
        <value>
          <fullName>Freelancer Activity</fullName>
        </value>
        <value>
          <fullName>Product Information</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>EventOrigin__c</fullName>
    <description>Shows Origin of Event either from Salesforce Classic / Lightning / Outlook (Lightning Sync) / Lightning Mobile App</description>
    <label>EventOrigin</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Classic</fullName>
        </value>
        <value>
          <fullName>Lightning</fullName>
        </value>
        <value>
          <fullName>Mobile</fullName>
        </value>
        <value>
          <fullName>Outlook</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Event_Speaker__c</fullName>
    <label>Event Speaker</label>
    <length>20</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Event_Status__c</fullName>
    <label>Event Status</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Not Started</fullName>
          <default>true</default>
          <label>Not Started</label>
        </value>
        <value>
          <fullName>Completed</fullName>
        </value>
        <value>
          <fullName>Cancelled</fullName>
        </value>
        <value>
          <fullName>-</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>ExpertEase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A detailed product.</description>
    <label>ExpertEase</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Facilitate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A detailed Product</description>
    <label>Facilitate</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>First_Call_Resolution__c</fullName>
    <label>First Call Resolution</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Yes</fullName>
        </value>
        <value>
          <fullName>No</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Last_Modified__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>Legacy_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>Location_Was_Automatically_Calculated__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Will be true if the Location field on the event was automatically calculated. For manually entered locations, this will be false. Used to determine if Location should be automatically changed when WhoId or WhatId is changed.</description>
    <label>Location Was Automatically Calculated</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Message__c</fullName>
    <defaultValue>'You are about to create a Task Call.  This is not a Customer Facing Event (CFE).  If you want to log a CFE, please use the "New Event" button above.'</defaultValue>
    <description>R/O field available in the "Log a Call" global Action.</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>New_Customer_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in the Dubai Hub  (UAE, Egypt, Kuwait, Saudi Arabia and South Africa) to track customer conversion rate after events. Used in Task layout. Very similiar checkbox exist on Events for Germany but chosed not to use to not mix the task and event fields</description>
    <inlineHelpText>A customer converted thanks to this event</inlineHelpText>
    <label>New Customer Conversion</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Nite_White_D_JP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Special Product sold in Japan.</description>
    <label>Nite White (D-JP)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Number_of_implants_TR__c</fullName>
    <description>This is a field requested from turkey to track the number of implants during surgery</description>
    <label>Number of implants (TR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Number_of_patients_TR__c</fullName>
    <label>Number of patients (TR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Objective__c</fullName>
    <inlineHelpText>Enter the objective of the meeting</inlineHelpText>
    <label>Objective</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Order_collected_in_the_CFE__c</fullName>
    <formula>IF( isblank(Orders_Related_to_CFE__c)=True,False,True)</formula>
    <label>Order collected in the CFE</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Orders_Related_to_CFE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Orders Related to CFE</label>
    <referenceTo>Orders_Related_to_CFE__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Other__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A detailed Product</description>
    <label>Other</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Phone_Number_Calling__c</fullName>
    <description>phone number calling for the CTI integration since standard field is not visible in lightning</description>
    <label>Phone Number Calling</label>
    <type>Phone</type>
  </fields>
  <fields>
    <fullName>PlannedCFE__c</fullName>
    <formula>AND(Customer_Facing_Event__c, ActivityDateTime &gt; CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned CFE</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Presentation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Country: Singapore, Malaysia, Phillipines, SBU: All, Used for KPI measurements in Asia. Should be marked if it has been agreed that the rep may do a presentation on the meeting.</description>
    <inlineHelpText>Check this checkbox if it has been agreed to do a presentation for the Customer.</inlineHelpText>
    <label>Presentation</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Product_Area__c</fullName>
    <label>Product Area</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Customer_Facing_Event__c</controllingField>
      <valueSetDefinition>
        <value>
          <fullName>Dental</fullName>
        </value>
        <value>
          <fullName>Surgery</fullName>
        </value>
        <value>
          <fullName>Urology</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Product_Complaint_D_DE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by DE Digital Sales Reps to mark CFEs which involves a product complaint.</description>
    <label>Product Complaint (D-DE)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>RSM_Co_Travel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box used by SR to register CFEs where the RSM participates.</description>
    <inlineHelpText>Check box used by SR to register CFEs where the RSM participates.</inlineHelpText>
    <label>RSM Co-Travel</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Recording_Link__c</fullName>
    <label>Recording Link</label>
    <type>Url</type>
  </fields>
  <fields>
    <fullName>Related_To_D__c</fullName>
    <formula>IF(left( WhoId,3)="003","Contact", 
IF(left( WhoId,3)="00Q","Lead", 
if(left(WhatId,3)="001","Account", 
if(left(WhatId,3)="006","Opportunity", 
if(left(WhatId,3)="a01","Network", 
if(left(WhatId,3)="701","Campaign", 
""))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related To (D)</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Related_To_Name__c</fullName>
    <description>Populated by a trigger with the name of the record in the Related To Field.
Used partly for Wave to be able to display the name of this record which otherwise would just be an ID</description>
    <label>Related To Name</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Related_to_Account_Opportunity__c</fullName>
    <formula>if(left(WhatId,3)="001","Account",
if(left(WhatId,3)="006","Opportunity",
if(left(WhatId,3)="a01","Network",
if(left(WhatId,3)="701","Campaign",
IF(left( WhoId,3)="003","Contact", 
IF(left( WhatId,3)="01t","Product", 
IF(left( WhoId,3)="00Q","Lead",
"")))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related to</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Related_to_Opportunity__c</fullName>
    <description>This field sets a 1 if the event is linked to an Opportunity, otherwise 0. Use for analysis only</description>
    <formula>IF( LEFT(WhatId,3)="006" , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field sets a 1 if the event is linked to an Opportunity, otherwise 0. Use for analysis only</inlineHelpText>
    <label>Related to Opportunity (for analysis)?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>SBU__c</fullName>
    <label>SBU</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>SBU_Full_Names</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>Scientific_Market_Monitoring_D_IT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CFE related to a Scientific Project. Used by DI Italy.</description>
    <inlineHelpText>CFE related to a Scientific Project. Used by DI Italy.</inlineHelpText>
    <label>Scientific Market Monitoring (D-IT)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Send_Calendar_Invites__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send Calendar Invites flag is used to enable/disable outlook invite process for a particular event.</description>
    <inlineHelpText>Send Calendar Invites flag is used to enable/disable outlook invite process for a particular event.</inlineHelpText>
    <label>Send Calendar Invites</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Send_Survey__c</fullName>
    <label>Send Survey</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>Yes_No</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>Surgical_Guides__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SIMPLANT Surgical Guides</description>
    <label>Surgical Guides</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>System_Presentation_D_DE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>By request from Moritz Hamburger April 2012. Service promoted in Germany.</description>
    <label>System Presentation (D-DE)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>User_Country__c</fullName>
    <label>User Country</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Australia</fullName>
        </value>
        <value>
          <fullName>Austria</fullName>
        </value>
        <value>
          <fullName>Belgium</fullName>
        </value>
        <value>
          <fullName>Canada</fullName>
        </value>
        <value>
          <fullName>Denmark</fullName>
        </value>
        <value>
          <fullName>DEX</fullName>
        </value>
        <value>
          <fullName>Finland</fullName>
        </value>
        <value>
          <fullName>France</fullName>
        </value>
        <value>
          <fullName>Germany</fullName>
        </value>
        <value>
          <fullName>Holland</fullName>
        </value>
        <value>
          <fullName>Hong Kong</fullName>
        </value>
        <value>
          <fullName>HQ</fullName>
        </value>
        <value>
          <fullName>Indonesia</fullName>
        </value>
        <value>
          <fullName>Italy</fullName>
        </value>
        <value>
          <fullName>Japan</fullName>
        </value>
        <value>
          <fullName>Luxembourg</fullName>
        </value>
        <value>
          <fullName>Malaysia</fullName>
        </value>
        <value>
          <fullName>New Zealand</fullName>
        </value>
        <value>
          <fullName>Norway</fullName>
        </value>
        <value>
          <fullName>Poland</fullName>
        </value>
        <value>
          <fullName>Portugal</fullName>
        </value>
        <value>
          <fullName>Singapore</fullName>
        </value>
        <value>
          <fullName>Spain</fullName>
        </value>
        <value>
          <fullName>Sweden</fullName>
        </value>
        <value>
          <fullName>Switzerland</fullName>
        </value>
        <value>
          <fullName>Thailand</fullName>
        </value>
        <value>
          <fullName>UK</fullName>
        </value>
        <value>
          <fullName>USA</fullName>
        </value>
        <value>
          <fullName>Vietnam</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>User_District__c</fullName>
    <formula>Text(Owner:User.District__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User District</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>User_Region__c</fullName>
    <formula>Text(Owner:User.Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Region</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Ustomed_D_PL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ustomed (D-PL)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Weekday__c</fullName>
    <formula>CASE
     ( 
       MOD(  IF(IsAllDayEvent= true,ActivityDate,DATEValue(ActivityDateTime)) - DATE(1900, 1, 7), 7) ,
 0, "Sunday", 
 1, "Monday", 
 2, "Tuesday", 
 3, "Wednesday", 
 4, "Thursday", 
 5, "Friday", 
 6, "Saturday",
 "")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekday</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Workflow_Run_Time__c</fullName>
    <description>Updated by a workflow, which mainly to touch the event and to fire the trigger.</description>
    <label>Workflow Run Time</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>WrapupTimeInSeconds__c</fullName>
    <label>WrapupTimeInSeconds</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>holdTimeInSeconds__c</fullName>
    <label>holdTimeInSeconds</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>new_customer_acquisition_DE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used to track CFEs during new customer acquisition</description>
    <label>New Customer Acquisition (DE)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>origUCID__c</fullName>
    <description>field for the call</description>
    <label>origUCID</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>ringTimeInSeconds__c</fullName>
    <label>ringTimeInSeconds</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>talkTimeInSeconds__c</fullName>
    <label>talkTimeInSeconds</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
</CustomObject>